--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Ethiopian Connect
-description: Compiling resources and links for ethiopians wanting to connect
+description: Compiling resources and links for Ethiopians wanting to connect
 theme: jekyll-theme-minimal
